org-buetow-ecs/nginxservice.tf
#resource "aws_route53_record" "a_record_nginx" {
#  zone_id = data.terraform_remote_state.base.outputs.zone_id
#  name    = "nginx.${data.terraform_remote_state.base.outputs.zone_name}."
#  type    = "A"
#
#  alias {
#    name                   = data.terraform_remote_state.elb.outputs.alb_dns_name
#    zone_id                = data.terraform_remote_state.elb.outputs.alb_zone_id
#    evaluate_target_health = true
#  }
#}
#
#resource "aws_route53_record" "aaaa_record_nginx" {
#  zone_id = data.terraform_remote_state.base.outputs.zone_id
#  name    = "nginx.${data.terraform_remote_state.base.outputs.zone_name}."
#  type    = "AAAA"
#
#  alias {
#    name                   = data.terraform_remote_state.elb.outputs.alb_dns_name
#    zone_id                = data.terraform_remote_state.elb.outputs.alb_zone_id
#    evaluate_target_health = true
#  }
#}
#
#resource "aws_ecs_task_definition" "nginx" {
#  family                   = "nginx"
#  network_mode             = "awsvpc"
#  requires_compatibilities = ["FARGATE"]
#  cpu                      = "256"
#  memory                   = "512"
#  execution_role_arn       = aws_iam_role.ecs_execution_role.arn
#
#  tags = {
#    Name = "nginx"
#  }
#
#  container_definitions = jsonencode([{
#    name  = "nginx",
#    image = "nginx:latest",
#    portMappings = [{
#      containerPort = 80,
#      hostPort      = 80
#    }],
#    "logConfiguration" : {
#      "logDriver" : "awslogs",
#      "options" : {
#        "awslogs-group" : "/ecs/containers",
#        "awslogs-region" : "eu-central-1",
#        "awslogs-stream-prefix" : "nginx"
#      }
#    }
#  }])
#}
#
#resource "aws_ecs_service" "nginx" {
#  name            = "nginx"
#  cluster         = aws_ecs_cluster.ecs_cluster.id
#  task_definition = aws_ecs_task_definition.nginx.arn
#  launch_type     = "FARGATE"
#  desired_count   = 1
#
#  tags = {
#    Name = "nginx"
#  }
#
#  load_balancer {
#    target_group_arn = aws_lb_target_group.nginx_tg.arn
#    container_name   = "nginx" # Must match the name in your container definition
#    container_port   = 80      # The port your container is listening on
#  }
#
#  network_configuration {
#    subnets = [
#      data.terraform_remote_state.base.outputs.public_subnet_a_id,
#      data.terraform_remote_state.base.outputs.public_subnet_b_id,
#      data.terraform_remote_state.base.outputs.public_subnet_c_id,
#    ]
#    security_groups  = [data.terraform_remote_state.base.outputs.allow_web_sg_id]
#    assign_public_ip = true
#  }
#}
#
#resource "aws_lb_target_group" "nginx_tg" {
#  name        = "nginx-tg"
#  port        = 80
#  protocol    = "HTTP"
#  vpc_id      = data.terraform_remote_state.base.outputs.vpc_id
#  target_type = "ip"
#
#  tags = {
#    Name = "nginx"
#  }
#
#  health_check {
#    enabled             = true
#    healthy_threshold   = 2
#    unhealthy_threshold = 2
#    interval            = 30
#    path                = "/" # Modify if your app has a specific health check path
#    protocol            = "HTTP"
#    timeout             = 3
#    matcher             = "200-299"
#  }
#}
#
#resource "aws_lb_listener_rule" "nginx_https_listener_rule" {
#  listener_arn = data.terraform_remote_state.elb.outputs.alb_https_listener_arn
#  priority     = 100
#
#  action {
#    type             = "forward"
#    target_group_arn = aws_lb_target_group.nginx_tg.arn
#  }
#
#  condition {
#    host_header {
#      values = ["nginx.${data.terraform_remote_state.base.outputs.zone_name}"]
#    }
#  }
#
#  tags = {
#    Name = "nginx"
#  }
#}
